fix(about): title overflow

--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -42,7 +42,7 @@ $padding-top: 2rem;
     }
   }
 
-  h1 {
+  h2 {
     margin: 0;
   }
 }
